fixes silderight flicker bug, tested on iphone 3GS ios 3.1.3

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -207,6 +207,7 @@ body {
 }
 
 #jqt .slideright.out {
+    z-index: 11 !important;
     -webkit-animation-name: slideRightOut;
 }
 
